Praca ok. 40 stron.

--- a/praca/praca.tex
+++ b/praca/praca.tex
@@ -5,6 +5,7 @@
 \usepackage{indentfirst}
 \usepackage{url}
 
+\usepackage{amsmath}
 \usepackage{color}
 \usepackage{listings}
 \usepackage{graphicx}
@@ -18,6 +19,7 @@
 \definecolor{mauve}{rgb}{0.58,0,0.82}
 
 \lstset{language=C}
+\lstset{basicstyle=\footnotesize}
 \lstset{backgroundcolor=\color{darkgray}}
 \lstset{numbers=left, numberstyle=\tiny, stepnumber=2, numbersep=5pt}
 \lstset{keywordstyle=\color{red}\bfseries\emph}
