--- a/trunk/praca/praca.tex
+++ b/trunk/praca/praca.tex
@@ -27,7 +27,7 @@
 \lstset{stringstyle=\color{mauve}}
 
 \begin{document}
-\title{ 802.11 (Tytuł do ustalenia) }
+\title{ \emph{hop-sniffer}: Narzędzie pomiaru opóźnień w standardzie \emph{802.11}. }
 \author{ Marcin Harasimczuk }
 \maketitle
 
@@ -39,23 +39,23 @@
 \mbox{}
 \bibliographystyle{plain}
 
-\section{Cel pracy}
+\section{Cel pracy.}
 \input{ch_Target}
 
-\section{Wprowadzenie do dziedziny}
+\section{Wprowadzenie do dziedziny.}
 \input{ch_Introduction}
 
-\section{Pomiar czasu przełączania kanału radiowego}
+\section{Pomiar czasu przełączania kanału radiowego.}
 \input{ch_Measurement}
 
-\section{Obsługa 802.11 w systemie operacyjnym Linux}
-\input{ch_Linux}
-
-\section{Narzędzie pomiarowe: hop-sniffer}
+\section{Narzędzie pomiarowe: \emph{hop-sniffer}.}
 \input{ch_hop_sniffer}
 
-\section{Podsumowanie}
+\section{Wnioski z pomiaru roamingu \emph{802.11}.}
 \input{ch_Conclusion}
+
+\section{Kierunki rozwoju.}
+\input{ch_Sumup}
 
 \nocite{*}
 \bibliography{bibliografia}
